<resources>
  <plurals name="updates_notification_body">
    <item quantity="one">You\'ve got %d update ready to install</item>
    <item quantity="two">You\'ve got %d updates ready to install</item>
    <item quantity="few">You\'ve got %d updates ready to install</item>
    <item quantity="many">You\'ve got %d updates ready to install</item>
    <item quantity="other">You\'ve got %d updates ready to install</item>
  </plurals>
  <string name="drawer_title_my_account">My Account</string>
  <string name="drawer_title_settings">Settings</string>
  <string name="drawer_title_feedback_send_button">Send feedback</string>
  <string name="feedback_subject">Subject</string>
  <string name="feedback_to_write2">Write here to send us your feedback…\n\n
        Please give us all the details you can (in English):
        \n\• Steps you have done
        \n\• Errors you are seeing</string>
  <string name="feedback_include_logs">Include screenshot and logs</string>
  <string name="feedback_no_email">No email client installed!</string>
  <string name="aptoide_email">aptoide@aptoide.com</string>
  <string name="aptoide_url">http://www.aptoide.com/</string>
  <string name="facebook">Facebook</string>
  <string name="connect_facebook">Connect with Facebook</string>
  <string name="all_button_feedback_send">Send feedback</string>
  <string name="install">Install</string>
  <string name="open">Open</string>
  <string name="all_title_ad">Ad</string>
  <string name="not_now_button">NOT NOW</string>
  <string name="learn_more_button">LEARN MORE</string>
  <string name="learn_more_title_case_button">Learn more</string>
  <string name="continue_button">CONTINUE</string>
  <string name="uninstall_button">Uninstall</string>
  <string name="access_to_get_accounts_rationale">You need to allow access to Get Accounts</string>
  <string name="developer_website">Website: %s</string>
  <string name="not_available">N/A</string>
  <string name="developer_email">Email: %s</string>
  <string name="developer_privacy_policy">Privacy Policy: %s</string>
  <string name="button_header_more">more</string>
  <string name="bottomnavigation_button_home">Home</string>
  <string name="bottomnavigation_button_search">Search</string>
  <string name="bottomnavigation_button_stores">Stores</string>
  <string name="bottomnavigation_button_apps">Apps</string>
  <string name="bottomnavigation_button_editorial">Editorial</string>
  <string name="bottomnavigation_button_news">News</string>
  <string name="bottomnavigation_button_trending">Trending</string>
  <string name="bottomnavigation_button_discover">Discover</string>
  <string name="bottomnavigation_button_manager">Manager</string>
  <string name="bottomnavigation_button_updates">Updates</string>
  <string name="bottomnavigation_button_my_apps">My apps</string>
  <string name="appview_short_developer_website">Website</string>
  <string name="appview_short_developer_email">Email</string>
  <string name="appview_short_developer_privacy_policy">Privacy Policy</string>
  <string name="appview_button_install">Install</string>
  <string name="appview_button_downgrade">Downgrade</string>
  <string name="appview_button_open" comment="appview_button_open">Open</string>
  <string name="appview_button_update">Update</string>
  <string name="appview_button_buy">Buy</string>
  <string name="appview_followers_count_text">%1$s   followers</string>
  <string name="appview_other_versions">Other versions</string>
  <string name="appview_newer_version">Newer version available</string>
  <string name="appview_latest_version_text">Latest version</string>
  <string name="appview_latest_version_with_value">Latest version %s</string>
  <string name="appview_version_text">Version</string>
  <string name="appview_rate_this_app">Rate this App</string>
  <string name="appview_good_app_guaranteed">Good app guaranteed!</string>
  <string name="appview_good_app_description">This app passed the security test for virus, malware and other malicious attacks and doesn\'t contain any threats!</string>
  <string name="appview_rating_card_text">Rating</string>
  <string name="appview_rating_empty_body">There are no reviews or ratings yet. Be the first one!</string>
  <string name="appview_button_read_all">read all <![CDATA[>]]></string>
  <string name="appview_header_trusted_text">Trusted</string>
  <string name="see_more">See more</string>
  <string name="appview_title_you_might_also_like">You Might Also Like</string>
  <string name="appcardview_title_no_stars" translatable="false">- -</string>
  <string name="appview_recommend_message">Do you want to recommend this app to your followers?</string>
  <string name="appview_uploaded_by">App available in</string>
  <string name="appview_similar_apps">Similar Apps</string>
  <string name="appview_short_downloading">Downloading</string>
  <string name="appview_title_apkfy">Keep Aptoide installed to get</string>
  <string name="appview_message_apkfy_1">100%% safe updates of %1$s</string>
  <string name="appview_message_apkfy_2">Access to unrestricted apps</string>
  <string name="apkfy_install_message">Do you want to install this app?</string>
  <string name="appview_download_percentage_body">%1$s of %2$s</string>
  <string name="appview_download_error_missing_splits">Oops, there was a problem downloading this app. We\'ll fix it soon!</string>
  <string name="appview_title_donations_leaderboard">Top Donations</string>
  <string name="appview_message_donations_leaderboard">Donations are a great way to show your support for a developer and make a difference. Donate AppCoins now to get on the leaderboard.</string>
  <string name="appview_button_donations">DONATE</string>
  <string name="appview_message_donations_card">Do you like this app? Donate to show some love and support for the developer!</string>
  <string name="appview_message_donations_nowallet">It seems you don\'t have a wallet. Want to install it now?</string>
  <string name="appview_message_donations_empty">No donations yet. Be the first to claim the top spot on the leaderboard!</string>
  <string name="appview_title_donations_dialogue">Donation</string>
  <string name="appview_field_donations_dialogue">Nickname</string>
  <string name="appview_message_donations_completed">Thanks for donating and enjoy the app!</string>
  <string name="appview_title_donations_leaderboard_unknown">Mysterious Donor</string>
  <string name="dialog_version_size">Version: %1$s | Size: %2$s</string>
  <string name="other_versions_downloads_count_text">%1$s   downloads</string>
  <string name="menu_title_search">Search</string>
  <string name="menu_install">Install</string>
  <string name="menu_select_all">Select All</string>
  <string name="menu_select_none">Select None</string>
  <string name="clear">Clear</string>
  <string name="more_options_button">MORE OPTIONS</string>
  <string name="powered_by">Powered by</string>
  <string name="loading">Loading&#8230;</string>
  <string name="excluded_updates">Excluded updates</string>
  <string name="no_excluded_updates_msg">Is the latest version not working well? You can prevent an app from updating! Go to the Apps tab in the bottom menu and long press the app of your choice.</string>
  <string name="restore_updates">Restore updates</string>
  <string name="open_apps_manager">Open apps manager</string>
  <string name="zero">0</string>
  <string name="working_well">Works well</string>
  <string name="needs_license">Needs license</string>
  <string name="fake_app">Fake app</string>
  <string name="virus">Virus</string>
  <string name="additional_information">Additional information</string>
  <string name="social_facebook_screen_title">Facebook</string>
  <string name="social_twitter_screen_title">Twitter</string>
  <string name="top_comments">Top comments</string>
  <string name="rate">Rate</string>
  <string name="rate_app">Rate %s</string>
  <string name="title">Title</string>
  <string name="tap_a_star">Tap a star to rate</string>
  <string name="other_versions_on_different_stores">Other versions on different stores</string>
  <string name="review_optional">Review (optional)</string>
  <string name="feedback_not_valid">Please enter some valid subject.</string>
  <string name="thank_you_for_your_opinion">Thank you for your opinion.</string>
  <string name="ignore_update">Ignore update</string>
  <string name="five_numeric">5</string>
  <string name="four_numeric">4</string>
  <string name="three_numeric">3</string>
  <string name="two_numeric">2</string>
  <string name="one_numeric">1</string>
  <string name="just_reviews">Just reviews</string>
  <string name="downgrading_msg">Downgrading</string>
  <string name="updating_msg">Updating</string>
  <string name="installing_msg">Installing</string>
  <string name="needs_permission_to_fs">Needs permission to use the external file system</string>
  <string name="storage_access_permission_request_message">Allow access to your phone\'s storage so we can download and install this app.</string>
  <string name="camera_access_permission_request_message">Allow access to your phone\'s camera so you can take pictures with this app.</string>
  <string name="remote_install_menu_title">Install on TV</string>
  <string name="install_on_tv_mobile_error">Make sure your device is connected to Wi-Fi to use this feature.</string>
  <string name="remote_install_title">Choose target device</string>
  <string name="remote_install_success">The app is now being installed</string>
  <string name="remote_install_fail">The remote installation has failed</string>
  <string name="remote_install_nodevices">No devices found</string>
  <string name="remote_install_notinstallated">Do you have Aptoide TV installed on your Android TV? \n http://aptoi.de/tv</string>
  <string name="remote_install_nowifi">No Wi-Fi connection</string>
  <string name="remote_install_nowifi_tip">Please enable and connect to a Wi-Fi network</string>
  <string name="remote_install_empty_list">Searching…</string>
  <string name="remote_install_tip">Please make sure you have an Android TV connected to the network</string>
  <string name="remote_install_retry">Retry</string>
  <string name="remote_install_help">Help</string>
  <string name="remote_install_help_url" translatable="false">http://blog.aptoide.com/remote-tv-install</string>
  <string name="apps">Apps</string>
  <string name="home_title">Home</string>
  <string name="stores">Stores</string>
  <string name="skip">Skip</string>
  <string name="cancel">Cancel</string>
  <string name="holidayspromotion_message_popup">Earn %s AppCoins Credits by installing apps and spend them in your favorite games!</string>
  <string name="holidayspromotion_button_popup">Check it out!</string>
  <string name="wallet_verification_message_update_wallet_to_claim">Update the AppCoins Wallet to receive this reward!</string>
  <string name="wallet_verification_title_update_wallet">Update Wallet</string>
  <string name="updates_notification_dismiss_button">DISMISS</string>
  <string name="dark_theme_notification_title">Dark Theme has arrived!</string>
  <string name="dark_theme_notification_body">Save battery and reduce eye strain in low light conditions.</string>
  <string name="dark_theme_notification_button">TURN IT ON</string>
  <string name="dark_theme_notification_disclaimer">You can always change the theme in Settings.</string>
  <string name="eskills_onboarding_title">Introducing e-Skills</string>
  <string name="eskills_onboarding_body">Challenge other players, beat them and earn money!</string>
  <string name="eskills_v2_how_it_works_title">How Does It Work?</string>
  <string name="eskills_v2_how_1">Install an e-Skills game</string>
  <string name="eskills_v2_wallet_disclaimer">The game comes with the AppCoins Wallet</string>
  <string name="eskills_v2_how_2">Practice or get a ticket to start competing</string>
  <string name="eskills_v2_how_3">Beat other players</string>
  <string name="eskills_v2_how_4">Withdraw your winnings!</string>
</resources>