<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_home"
      android:enabled="true"
      android:icon="@drawable/ic_account_plus"
      android:title="@string/home_title"
      app:showAsAction="ifRoom"/>
  <item
      android:id="@+id/action_search"
      android:enabled="true"
      android:icon="@drawable/ic_search"
      android:title="@string/search"
      app:showAsAction="ifRoom"/>
  <item
      android:id="@+id/action_stores"
      android:enabled="true"
      android:icon="@drawable/ic_store"
      android:title="@string/stores"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_apps"
      android:enabled="true"
      android:icon="@drawable/ic_account_plus"
      android:title="@string/apps"
      app:showAsAction="ifRoom"/>

</menu>