<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900"
    >

  <TextView
      android:id="@+id/titleTextView"
      style="@style/Aptoide.TextView.Medium.M"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="20dp"
      android:text="@string/dark_theme_notification_title"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/descriptionTextView"
      style="@style/Aptoide.TextView.Regular.XS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="7dp"
      android:text="@string/dark_theme_notification_body"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="@+id/titleTextView"
      app:layout_constraintTop_toBottomOf="@+id/titleTextView"

      />

  <android.widget.Button
      android:id="@+id/dismissButton"
      style="@style/Aptoide.Button.Ghost"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="18dp"
      android:layout_marginEnd="12dp"
      android:layout_marginRight="12dp"
      android:background="@drawable/btn_ghost_theme_dark"
      android:text="@string/updates_notification_dismiss_button"
      android:textColor="@color/white"
      app:layout_constraintEnd_toStartOf="@id/turnItOnButton"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
      />

  <android.widget.Button
      android:id="@+id/turnItOnButton"
      style="@style/Aptoide.Button.Alternative"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:background="@drawable/aptoide_rounded_dark"
      android:text="@string/dark_theme_notification_button"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/dismissButton"
      app:layout_constraintTop_toTopOf="@+id/dismissButton"
      />

  <TextView
      style="@style/Aptoide.TextView.Medium.XXS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="18dp"
      android:layout_marginBottom="18dp"
      android:text="@string/dark_theme_notification_disclaimer"
      android:textColor="@color/grey"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dismissButton"
      app:layout_constraintVertical_bias="0"
      />

</androidx.constraintlayout.widget.ConstraintLayout>