<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >


  <TextView
      android:id="@+id/update_wallet_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="30dp"
      android:layout_marginEnd="12dp"
      android:layout_marginLeft="12dp"
      android:layout_marginRight="12dp"
      android:layout_marginStart="12dp"
      android:layout_marginTop="25dp"
      android:gravity="center"
      android:text="@string/wallet_verification_message_update_wallet_to_claim"
      app:layout_constraintBottom_toTopOf="@+id/cancel_wallet_update_button"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/Aptoide.TextView.Medium.M.BlackAlpha"
      />

  <Button
      android:id="@+id/cancel_wallet_update_button"
      android:layout_width="95dp"
      android:layout_height="56dp"
      android:layout_marginEnd="12dp"
      android:layout_marginRight="12dp"
      android:text="@string/cancel"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/update_wallet_button"
      app:layout_constraintTop_toBottomOf="@id/update_wallet_message"
      style="@style/Aptoide.Button.Flat.GreyMedium"
      />
  <Button
      android:id="@+id/update_wallet_button"
      android:layout_width="95dp"
      android:layout_height="56dp"
      android:text="@string/wallet_verification_title_update_wallet"
      app:layout_constraintBottom_toBottomOf="@id/cancel_wallet_update_button"
      app:layout_constraintLeft_toRightOf="@id/cancel_wallet_update_button"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@id/cancel_wallet_update_button"
      style="@style/Aptoide.Button.Flat"
      />

</android.support.constraint.ConstraintLayout>